# dndig

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  create.py  gemini.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
dndig/: __init__.py  api_client.py  cli.py  config.py  constants.py  file_utils.py  generator.py
docs/: prd.md
prompts/: style.md  template.md
tests/: __init__.py  test_api_client.py  test_config.py  test_file_utils.py  test_integration.py
tests/fixtures/: test_prompt.md
